--- a/references.bib
+++ b/references.bib
@@ -74,3 +74,13 @@
   month = {dec},
   year = {2016},
 }
+@Misc{magnussonUsingLmeLmer2015,
+  title = {Using {{R}} and Lme/Lmer to Fit Different Two- and Three-Level Longitudinal Models - {{R Psychologist}}},
+  abstract = {I often get asked about how to fit different longitudinal models in lme/lmer. In this post I cover several different two-level, three-level and partially nested models.},
+  language = {en},
+  journal = {R Psychologist},
+  author = {Kristoffer Magnusson},
+  month = {apr},
+  year = {2015},
+  file = {C\:\\Users\\wdnooy1\\Zotero\\storage\\JELSQQRL\\r-guide-longitudinal-lme-lmer.html},
+}
