--- a/HelpMyCollaboratorUsesR.Rmd
+++ b/HelpMyCollaboratorUsesR.Rmd
@@ -15,8 +15,7 @@ affiliation:
   - id            : "2"
     institution   : "University of Amsterdam"
 authornote: |
-  Add complete departmental affiliations for each author here. Each new line herein must be indented, like this line.
-  Enter author note here.
+  Wouter de Nooy, Department of Communication Science, University of Amsterdam.
 abstract: |
   This is a concise introduction to using R for reproducible statistical analyses. It is meant to function as a guide and reference work for researchers who start using R and R Markdown or who have not used R or R Markdown for some time. 
   
@@ -24,7 +23,7 @@ abstract: |
   This document itself uses R for analyses and it is written in R Markdown. As such, it exemplifies the topics that it discusses. The R Markdown document can be downloaded from https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.Rmd. The PDF version is available at https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.pdf.
   <!-- https://tinyurl.com/ybremelq -->
 keywords          : "R; statistical analyses; reproducible research; R Markdown"
-wordcount         : "(to be added manually)"
+wordcount         : 6874 "(added manually using the wordcountaddin add-in)"
 bibliography      : ["r-references.bib", "references.bib"]
 link-citations    : true #citation year is link to list of references
 floatsintext      : yes #if no: tables and figures at the end of the document
@@ -35,15 +34,15 @@ linenumbers       : no
 mask              : no
 draft             : no
 documentclass     : "apa6"
-classoption       : "doc" #Oher options: "jou" (journal format), "man" (manuscript format)
+classoption       : "doc" #Other options: "jou" (journal format), "man" (manuscript format)
 output            :
-  papaja::apa6_pdf: 
-    toc: no         #no table of contents
-    number_sections: true #number sections (for referencing)
   bookdown::html_document2: #additional HTML output option
     toc: yes        #with a table of contents
     toc_depth: 3    #using three levels
     toc_float: yes  #which is situated in the left margin
+  papaja::apa6_pdf: 
+    toc: no         #no table of contents
+    number_sections: true #number sections (for referencing)
   papaja::apa6_word:
     toc: no         #no table of contents
 geometry: #page setup for PDF (LaTeX) output
@@ -62,7 +61,8 @@ header-includes:
 set.seed(42) # Seed for random number generation
 knitr::opts_chunk$set(
   cache.extra = knitr::rand_seed,
-  echo = FALSE, #by default, do not show the contents of code chunks
+  eval = TRUE, #by deault, execute the code in code chunks
+  echo = TRUE, #by default, show the contents of code chunks (to learn R)
   message = FALSE, #by default, do not show messages
   warning = FALSE, #by default, do not show warnings
   fig.pos = "H" #keep plots as close as possible to the code
@@ -165,7 +165,7 @@ When you start RStudio, R starts automatically. The project that was open when y
 
 Figure \@ref(fig:RStudio) shows the main panels of the RStudio interface with a project opened. It features a syntax file demonstrating some R commands that are discussed in Section \@ref(rcommands).
 
-```{r RStudio, fig.cap="Main panels of the RStudio user interface."}
+```{r RStudio, echo=FALSE, fig.cap="Main panels of the RStudio user interface."}
 # This is a safe way to include an external picture, add a caption, and assign
 # it a name (here: RStudio), so you can cross-reference it.
 include_graphics("RStudio.png") #from the knitr package
@@ -201,9 +201,8 @@ Sometimes, you can supply more than one value for an argument. For example, the 
 
 Below are some examples of commands and the textual output that the `summary` function sends to the console, which also feature in Figure \@ref(fig:RStudio). Note that R is case-sensitive: uppercase letters are considered different letters than lowercase letters.
 
-```{r store_results, eval=FALSE, echo=TRUE}
-# Note that this code chunk is not executed (eval = FALSE). Instead, it is shown
-# to the reader (echo=TRUE).
+```{r store_results, eval=FALSE}
+# Note that this code chunk is not executed (eval = FALSE).
 
 # Copy the student sleep data set (always available in R) to a data object that
 # we can inspect in the environment.
@@ -264,7 +263,8 @@ Actually, RStudio saves the work space by default when you exit RStudio. This ma
 
 For this reason, it is a good idea to turn off saving work spaces when exiting RStudio and reloading them when reopening a project in RStudio. To this end, adjust the settings in the _Tools_ menu under _Global Options_ as indicated in Figure \@ref(fig:RStudiosettings).
 
-```{r RStudiosettings, fig.cap="Workspace settings in the Tools menu under Global Options."}
+```{r RStudiosettings, echo=FALSE, fig.cap="Workspace settings in the Tools menu under Global Options."}
+# Show a picture from an external file.
 include_graphics("Settings.png")
 ```
 
@@ -272,8 +272,8 @@ include_graphics("Settings.png")
 
 The base installation of R includes several important packages, such as the `base` package and the `stats` package, which contains many statistical analyses. These packages are loaded when you start R, so they are always ready for usage. Additional packages must be installed once but they must be loaded in every new R session that uses them. 
 
-```{r installscreen, eval=TRUE, echo=FALSE, fig.cap="The RStudio dialog for installing packages."}
-# The RStudio dialog for installing packages.
+```{r installscreen, echo=FALSE, fig.cap="The RStudio dialog for installing packages."}
+# Picture of the RStudio dialog for installing packages.
 include_graphics("installpackage.png")
 ```
 
@@ -285,8 +285,9 @@ Note the _Install to Library:_ field. Here you can see where the packages are pl
 
 Installed packages must be loaded in a new R session before they can be used. The code below loads the `tidyverse` package [@R-tidyverse] and the `papaja` package [@R-papaja]. The `tidyverse` package actually loads a set of packages that allow us to handle data in a transparent way. The `papaja` package offers functions for creating tables and figures that conform to APA6 standards.
 
-```{r packages, echo=TRUE, eval=FALSE}
-# Load the packages that you need.
+```{r packages, eval=FALSE}
+# Load the packages that you need. Not executed here because the packages were
+# loaded in the first code chunk.
 
 # Install the tidyverse package from CRAN (only once!).
 install.packages("tidyverse")
@@ -332,7 +333,7 @@ The data set is available in several formats including SPSS and CSV. The SPSS fi
 
 The recommended function to load an SPSS data file in R is `read_spss()` in the `haven` package [@R-haven]. This function reads SPSS data and turns it into a _data frame_, which is the R version of a data matrix.
 
-```{r readSPSS, echo=TRUE}
+```{r readSPSS}
 # Load the haven package for reading SPSS data files.
 library(haven)
 
@@ -347,7 +348,7 @@ Inspect the data object `glbwarm_spss` in the _Environment_ tab of the RStudio i
 
 The `haven` package contains the command `as_factor()` to turn all variables with value labels into factors. Note the underscore in `as_factor()`. There is another function `as.factor()` in the `base` package, which uses a dot. This happens more often. The `tidyverse` package has improved versions of basic functions and it replaces dots in function names by underscores.
 
-```{r in2factors, echo=TRUE}
+```{r in2factors}
 # Change variables with value labels into factors.
 # Note: We overwrite the data frame glbwarm_spss now.
 glbwarm_spss <- as_factor(glbwarm_spss)
@@ -361,7 +362,7 @@ CSV (Comma Separated Values) is a very general file format, which is often used 
 
 There is a complication with CSV files. Countries that use the comma as decimal separator tend not to use the comma to separate fields. Instead, a semicolon is used. For this reason, the `readr` package [@R-readr], which is part of `tidyverse`, contains two commands for reading CSV files: `read_csv()` for comma-delimited files and `read_csv2()` for files using semicolons between fields. Open the CSV file in a text editor to see which delimiter is used if you are not sure.
 
-```{r echo=TRUE, message=TRUE}
+```{r loadCSV, message=TRUE}
 # Read the CSV file and store it in a data frame.
 # Note: The data file glbwarm.csv must be present in the project directory.
 glbwarm_csv <- read_csv("glbwarm.csv")
@@ -379,7 +380,7 @@ In this example, all variables are read as numeric with (possibly) decimal place
 
 If you want to have the value labels instead of the numeric codes for the categorical variables, you can export the SPSS file to CSV (in SPSS: File > Export > CSV Data) with the option _Save value labels where defined instead of data values_ checked. This CSV, named _glbwarm2.csv_ is [available here](https://wdenooy.github.io/Switch2R/glbwarm2.csv). If you import this data file with the `read_csv()` function, _ideology_, _sex_, and _partyid_ are string variables. In contrast to SPSS, R handles string variables as categorical variables, just like factors. The code below shows how you can set the types of variables with `read_csv()`.
 
-```{r echo=TRUE, eval=FALSE}
+```{r loadCSV2, eval=FALSE}
 # Read the CSV file exported from SPSS and store it in a data frame.
 # Note: The data file glbwarm.csv must be present in the project directory.
 glbwarm2_csv <- read_csv("glbwarm2.csv",
@@ -411,7 +412,7 @@ In addition to a formula, we have to specify the data frame containing the varia
 
 It is possible to transform variables within the regression formula. For example, age (in years) is divided by 10 to obtain age in decades. This will increase the effect size of age, which otherwise is very close to zero. Finally, note that we store the results as a data object (`govact_model`) instead of sending them to the screen, as SPSS would do.
 
-```{r regression1, echo=TRUE, eval=TRUE}
+```{r regression1}
 # A regression model predicting opinions about government intervention.
 # The results are saved as data object "govact_model".
 govact_model <- lm(govact ~ posemot + negemot + I(age/10) + ideology,
@@ -428,9 +429,9 @@ Storing the analysis results as a data object is all fine and well, but we want 
 
 ### Basic tabular results
 
-In general, the `summary()` function presents the most basic results. For a linear regression model, it tells us the model formula, some statistics for the residuals, the values of the regression coefficients, and model fit statistics (R^2^ and an _F_ test).
+In general, the `summary()` function presents the most basic results. For a linear regression model, it tells us the model formula, some statistics for the residuals, the values of the regression coefficients, and model fit statistics (_R_^2^ and an _F_ test).
 
-```{r echo=TRUE}
+```{r summary}
 # Show a table of regression results as plain text.
 summary(govact_model)
 ```
@@ -445,7 +446,7 @@ Usually, these packages use LaTex (or TeX more generally) to create camera-ready
 
 The `papaja` package contains functions to create tables of statistical results that conform to the APA6 specifications. It works best if you use the RMarkdown template for an APA6-style paper, which is actually used for the web site or PDF that you are reading right now (see Section \@ref(apa6template)).
 
-```{r papajatable, echo=TRUE, results='asis'}
+```{r papajatable, results='asis'}
 # Load the papaja package.
 library(papaja)
 
@@ -494,7 +495,7 @@ The `tidy()` function in the `broom` package extracts the estimated coefficients
 
 Let us estimate an additional regression model with an interaction effect of age with negative emotions. Note how easy it is to specify an interaction effect. 
 
-```{r echo=TRUE}
+```{r broom}
 # Load the broom package, which converts statistical (results) objects.
 library(broom)
 
@@ -523,7 +524,7 @@ This table is not as it should be according to the APA6 standard. The dependent 
 
 This requires quite some data wrangling, which is exemplified in the code below. In addition, we need the `kableExtra` package [@R-kableExtra] for additional formatting of the table and adding a note.
 
-```{r regressiontablecustom, echo=TRUE}
+```{r regressiontablecustom}
 # Load the kableExtra package for fine-tuning the table.
 library(kableExtra)
 
@@ -776,7 +777,7 @@ govact_tidy %>%
 
 It becomes more and more common to plot regression coefficients instead of presenting them in a table. The `coefplot` package [@R-coefplot] can plot regression coefficients for one or more models. It has an extensive set of options for changing the appearance of the plot. Figure \@ref(fig:coefplot) and the accompanying R code showcase some options. 
 
-```{r coefplot, echo=TRUE, fig.cap="Unstandardized regression coefficients for a model without and a model with an interaction effect. The fat and thin lines represent confidence intervals based on one and two standard errors."}
+```{r coefplot, fig.cap="Unstandardized regression coefficients for a model without and a model with an interaction effect. The fat and thin lines represent confidence intervals based on one and two standard errors."}
 # Plot the regression coefficients with their standard errors using the
 # coefplot package.
 
@@ -808,7 +809,7 @@ If you want to have full control of your plots, learn `ggplot2`. The book _R for
 
 Plotting regression lines is another appealing way of presenting your results (Figure \@ref(fig:plotregline)). The `visreg` package [@R-visreg] can do this. It can create `ggplot2` plots, which can be further customized. More extensive options are available in the `effects` package [@R-effects], but this package cannot produce `ggplot2` plots.
 
-```{r plotregline, echo=TRUE, fig.cap="The effect of negative emotions at different age levels, 95\\% confidence intervals, and partial residuals. Note that The age groups are defined by default at the 10th, 50th, and 90th percentiles. Partial residuals have the color of the closest percentile."}
+```{r plotregline, fig.cap="The effect of negative emotions at different age levels, 95\\% confidence intervals, and partial residuals. Note that The age groups are defined by default at the 10th, 50th, and 90th percentiles. Partial residuals have the color of the closest percentile."}
 # Plot the effect of negative emotions for different age groups.
 
 # Load the visreg package.
@@ -833,7 +834,7 @@ Residual plots are commonly used to check regression assumptions. A fitted regre
 
 The `car` package offers the `residualPlot()` function to plot the (unstandardized) residuals against the (unstandardized) fitted (predicted) values. The related `residualPlots()` function (note the plural) also displays the residuals against each of the predictor variables. Note that these are not `ggplot` plots. If you are looking for additional checks and tests for a regression model, consult the `car` package.
 
-```{r plotresiduals, echo=TRUE, fig.cap="A residuals plot for the model predicting opinion about government intervention from political ideology, positive emotions, and the interaction between negative emotions and age."}
+```{r plotresiduals, fig.cap="A residuals plot for the model predicting opinion about government intervention from political ideology, positive emotions, and the interaction between negative emotions and age."}
 # Pplot the residuals against the predicted values.
 
 # Load package car.
@@ -873,7 +874,7 @@ Note that the data frame must be specified for both variables.
 
 The fitted model is (stored as) a `htest` object, which includes both statistical results (chi-squared value, degrees of freedom, and p value) and the contents of the contingency table: observed frequencies, expected frequencies under the null hypothesis of independence, residuals, and standardized residuals. You can inspect the contingency table by simply sending the list item to the screen, for example, `fit_chisq$observed` or `fit_chisq$stdres`. The code below creates an APA6-style contingency table.
 
-```{r chisqtable, echo=TRUE}
+```{r chisqtable}
 # Create a contingency table with observed frequencies and standardized
 # residuals.
 
@@ -946,7 +947,7 @@ A downside to this package is that we have to estimate two regression models our
 
 Also note that interactions must be included in the regression formula as separate terms for the conditional and interaction effects, e.g., `y ~ x1 + x2 + x1:x2` instead of `y ~ x1*x2` and the argument `INT =` must be set to `TRUE` in the `mediate()` function.
 
-```{r mediation1, echo=TRUE}
+```{r mediation1}
 # Estimate the indirect effect of sex via negative emotions on opinion about
 # governmental intervention.
 
@@ -972,7 +973,7 @@ summary(fit_indirect)
 
 It is more attractive to present the direct and indirect effects in a diagram. The code below creates a diagram using the `ggplot2` package.
 
-```{r mediation1plot, echo=TRUE, fig.asp=0.3, fig.cap="Main results of a mediation model presented as a causal diagram."}
+```{r mediation1plot, fig.asp=0.3, fig.cap="Main results of a mediation model presented as a causal diagram."}
 # Plot the mediation diagram with ggplot2.
 # Create coordinates for the variable names.
 data.frame(x = c(0.3, 0.5, 0.7), #hor. coordinates of labels
@@ -1019,7 +1020,7 @@ data.frame(x = c(0.3, 0.5, 0.7), #hor. coordinates of labels
 
 The sensitivity of the estimated mediation effect to confounders can be assessed with the `medsens()` function in the `mediation` package. Feed the object with the mediation results to this function and, if needed, adjust the size of the steps for the residuals correlation (default = 0.1) that must be checked. See the package documentation and [manual](https://web.mit.edu/teppei/www/research/mediationR.pdf) for more plotting options.
 
-```{r mediation1sensitivity, echo=TRUE, fig.cap="The sensitivity of the indirect effect to confounders."}
+```{r mediation1sensitivity, fig.cap="The sensitivity of the indirect effect to confounders."}
 # Execute and plot the sensitivity of the indirect effect to confounders (may
 # take some time).
 fit_sens <- medsens(fit_indirect, rho.by = 0.05)
@@ -1048,7 +1049,7 @@ Moderation in linear regression analysis is exemplified in Section \@ref(customt
 
 Mean-centering of predictor or moderator variables is relatively easy, because we directly get the mean of a variable with the `mean()` function.
 
-```{r meancentering, eval=FALSE, echo=TRUE}
+```{r meancentering, eval=FALSE}
 # Mean-centering in basic R (ignoring missing values.
 dataset$newvariable <- dataset$variable - mean(dataset$variable, na.rm = TRUE)
 # Mean-centering with tidyverse (ignoring missing values.
@@ -1064,7 +1065,7 @@ Multilevel models can be estimated with the the `nlme` package [@R-nlme] or `lme
 
 In the functions of the `nlme`package, `lme()` for linear models and `nlme()` for non-linear models, the fixed effects of the model are specified with a formula in the usual way. In addition, the `random =` argument specifies effects that vary at a higher level.
 
-The functions `lmer()` and `glmer()` in the `lme4` package estimate multilevel models for linear and generalized linear models respectively. Random effects are added to the model formula using a vertical bar (`|`). For example, `(1 | subject)` adds random intercepts at the subject level, while `(1 + age | subject)` adds varying intercepts and varying slopes for age at the subject level as well as a covariance between the random intercepts and slopes. Note that `subject` must be the name of a variable identifying subjects as higher level units.
+The functions `lmer()` and `glmer()` in the `lme4` package estimate multilevel models for linear and generalized linear models respectively. Random effects are added to the model formula using a vertical bar (`|`). For example, `(1 | subject)` adds random intercepts at the subject level, while `(1 + age | subject)` adds varying intercepts and varying slopes for age at the subject level as well as a covariance between the random intercepts and slopes. Note that `subject` must be the name of a variable identifying subjects as higher level units. For a discussion of specifiyng more complicated multilevel models, see [Using R and lme/lmer to fit different two- and three-level longitudinal models](https://rpsychologist.com/r-guide-longitudinal-lme-lmer) [@magnussonUsingLmeLmer2015].
 
 Non-linear multilevel models, for example, multilevel logistic regression models, are notably hard to estimate. For this type of models, a Bayesian approach with MCMC estimation is usually preferred. The `rstanarm` package [@R-rstanarm] contains functions that have the same structure and the same type of output as the multilevel functions in the `lme4` package.
 
@@ -1080,7 +1081,7 @@ For more information, consult the [Psychometric Models and Methods](https://cran
 
 It is possible to use the R function for linear (regression) models (`lm()`) to execute one-sample, paired-samples, and independent-samples t tests. The `stats` package also contains the `t.test()` function for this purpose. This function offers the option to set the test value (also for the mean difference in a paired-samples or independent-samples t test), the direction of the test (left-sided, right-sided, and two-sided), and the confidence level. Another advantage of the `t.test()` function is that it yields a results object of class `htest`, which can be summarized in APA6 format with the `apa_print()` function in the `papaja` package (see Section \@ref(inlineAPA)). The code below exemplifies a right-sided one-sample t test. 
 
-```{r ttestonesample, echo=TRUE}
+```{r ttestonesample}
 # Right-sided, one-sample t-test with 4.0 as hypothesized population value.
 one_sample <- t.test(
   x = glbwarm_spss$govact, #test variable
@@ -1095,7 +1096,7 @@ Note that the command does not have a `data =` argument, like `lm()`, so you hav
 
 A paired-samples t test is quite straightforward: just add a second variable with the `y = ` argument and set the `paired =` argument to `TRUE` (see the code below). An independent-samples t test is a bit more complicated. First, we have to determine if the two groups have equal population variances because this affects the way the standard error must be calculated. We can do this with the `var.test()` function in the `stats` package. In the code below, we use the `p.value` of this test in the `var.equal =` argument of the t test. The code `(result_var$p.value > 0.05)` returns `TRUE` if the equal variances test is not significant at the .05 level (the p value is above .05) and it returns `FALSE` otherwise. Instead of telling the t test manually whether the equal variances assumption is true or false, we let the results of the equal variances test provide this information. This way, we are sure that the right option is selected.
 
-```{r ttests, echo=TRUE}
+```{r ttests}
 # Two-sided paired samples t test: Average difference between positive and
 # negative emotions is zero in the population (nonsensical example).
 paired_samples <- t.test(
@@ -1157,7 +1158,7 @@ The R Markdown document is created (knitted) line by line from the start to the 
 
 Code and text can be integrated even more tightly. R functions can be embedded within sentences, so code results become part of the sentence. We can pull the mean and standard deviation of the opinion about government intervention for males from the data frame with the following code (using the `printnum()` function in `papaja`):
 
-```{r inline1, echo=TRUE, eval=FALSE}
+```{r inline1, eval=FALSE}
 # R code for inline use within a sentence.
 `r printnum(mean(glbwarm_spss$govact[glbwarm_spss$sex == "male"]))`
 `r printnum(sd(glbwarm_spss$govact[glbwarm_spss$sex == "male"]))`
@@ -1171,7 +1172,7 @@ Note that the numbers are pulled directly from the data set, so we cannot make m
 
 The `papaja` package also contains functions that extract relevant statistical results from a results object and format them according to the APA6 guidelines. The following command formats the results of the independent-samples t test from Section \@ref(ttests), which we stored in the object `indep_samples`:
 
-```{r inline2, echo=TRUE, eval=FALSE}
+```{r inline2, eval=FALSE}
 `r apa_print(indep_samples)$full_result`
 ```
 
@@ -1234,7 +1235,7 @@ There are packages for scraping web data, for example `rvest` [@R-rvest] and `ht
 
 R is a set of functions. It is easy to write your own functions, see Chapter 15 in _R for Data Science_ [@WickhamDataScienceImport2017]. The code below shows the general template for creating a new function.
 
-```{r functions, echo=TRUE, eval=FALSE}
+```{r functions, eval=FALSE}
 # Function template:
 new_function_name <- function (argument1, argument2 = 0) {
   
@@ -1259,10 +1260,14 @@ Once an RStudio project is linked to Git, the top-right panel in the RStudio int
 
 RStudio also supports another version control software: Subversion.
 
+## Conclusion
+
+> Do what you have been doing but do it more transparently and efficiently with R and RMarkdown.
+
 \newpage
 
 # References
-```{r create_r-references}
+```{r create_r-references, echo=FALSE}
 r_refs(file = "r-references.bib")
 ```
 
