CC license added.

--- a/HelpMyCollaboratorUsesR.Rmd
+++ b/HelpMyCollaboratorUsesR.Rmd
@@ -21,6 +21,9 @@ abstract: |
   
   
   This document itself uses R for analyses and it is written in R Markdown. As such, it exemplifies the topics that it discusses. The R Markdown document can be downloaded from https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.Rmd. The PDF version is available at https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.pdf.
+  
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+  
   <!-- https://tinyurl.com/ybremelq -->
 keywords          : "R; statistical analyses; reproducible research; R Markdown"
 wordcount         : 6874 "(added manually using the wordcountaddin add-in)"
